log

Mon 14 Aug 2023 02:36:20 AM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
0a83823
Mon 14 Aug 2023 02:51:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2fafc7c
Mon 14 Aug 2023 02:53:53 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
48faed6
Mon 14 Aug 2023 02:54:42 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:5: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   33 |     print("a");
      |     ^~~~~
      |     printf
cc1: all warnings being treated as errors
Compilation failed
6b2f601
Mon 14 Aug 2023 02:55:00 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
301fa28
Mon 14 Aug 2023 02:55:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1fbaa5c
Mon 14 Aug 2023 02:56:46 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ea50711
Mon 14 Aug 2023 03:02:46 AM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
5df60b2
